--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,12 +11,93 @@ include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
+    always_use_package_imports: true
+    avoid_empty_else: true
     avoid_print: false
-    prefer_const_constructors_in_immutables: false
-    prefer_const_constructors: false
-    prefer_const_literals_to_create_immutables: false
-    prefer_final_fields: false
-    unnecessary_breaks: true
-    use_key_in_widget_constructors: false
+    avoid_relative_lib_imports: true
+    avoid_types_as_parameter_names: true
+    avoid_web_libraries_in_flutter: true
+    collection_methods_unrelated_type: true
+    discarded_futures: true
+    empty_statements: true
+    no_duplicate_case_values: true
+    no_self_assignments: true
+    no_wildcard_variable_uses: true
+    unrelated_type_equality_checks: true
+    use_key_in_widget_constructors: true
+    valid_regexps: true
+    package_names: true
+    secure_pubspec_urls: true
+    always_put_required_named_parameters_first: true
+    always_specify_types: true
+    avoid_escaping_inner_quotes: true
+    avoid_final_parameters: true
+    avoid_function_literals_in_foreach_calls: true
+    avoid_init_to_null: true
+    avoid_renaming_method_parameters: true
+    avoid_return_types_on_setters: true
+    avoid_single_cascade_in_expression_statements: true
+    avoid_unnecessary_containers: true
+    await_only_futures: true
+    camel_case_extensions: true
+    camel_case_types: true
+    constant_identifier_names: true
+    curly_braces_in_flow_control_structures: true
+    empty_catches: true
+    empty_constructor_bodies: true
+    exhaustive_cases: true
+    file_names: true
+    implementation_imports: true
+    implicit_call_tearoffs: true
+    library_annotations: true
+    library_prefixes: true
+    library_private_types_in_public_api: true
+    no_leading_underscores_for_library_prefixes: true
+    no_leading_underscores_for_local_identifiers: true
+    non_constant_identifier_names: true
+    null_check_on_nullable_type_parameter: true
+    null_closures: true
+    overridden_fields: true
+    prefer_adjacent_string_concatenation: true
+    prefer_collection_literals: true
+    prefer_conditional_assignment: true
+    prefer_contains: true
+    prefer_final_fields: true
+    prefer_for_elements_to_map_fromIterable: true
+    prefer_function_declarations_over_variables: true
+    prefer_generic_function_type_aliases: true
+    prefer_if_null_operators: true
+    prefer_initializing_formals: true
+    prefer_inlined_adds: true
+    prefer_interpolation_to_compose_strings: true
+    prefer_is_empty: true
+    prefer_is_not_empty: true
+    prefer_is_not_operator: true
+    prefer_iterable_whereType: true
+    prefer_null_aware_operators: true
+    prefer_spread_collections: true
+    prefer_typing_uninitialized_variables: true
+    provide_deprecation_message: true
+    sized_box_for_whitespace: true
+    slash_for_doc_comments: true
+    type_init_formals: true
+    type_literal_in_constant_pattern: true
+    unnecessary_brace_in_string_interps: true
+    unnecessary_const: true
+    unnecessary_constructor_name: true
+    unnecessary_getters_setters: true
+    unnecessary_late: true
+    unnecessary_null_aware_assignments: true
+    unnecessary_null_in_if_null_operators: true
+    unnecessary_nullable_for_final_variable_declarations: true
+    unnecessary_overrides: true
+    unnecessary_string_escapes: true
+    unnecessary_string_interpolations: true
+    unnecessary_this: true
+    unnecessary_to_list_in_spreads: true
+    use_full_hex_values_for_flutter_colors: true
+    use_rethrow_when_possible: true
+    use_string_in_part_of_directives: true
+    void_checks: true
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
